style: fix span spacing

--- a/src/components/SingleStat/SingleStat.scss
+++ b/src/components/SingleStat/SingleStat.scss
@@ -1,4 +1,5 @@
 .statRow {
     display: flex;
+    justify-content: space-between;
     width: 200px;
 }
